<resources>
    <string name="app_name">MySnake</string>
    <string name="title_activity_menu">FullscreenActivity</string>
    <string name="button_new_game">Start</string>
    <string name="button_options">Options</string>
    <string name="button_statistics">Statistics</string>
    <string name="text_statistic">Statistics</string>
    <string name="text_options">Options</string>
    <string name="text_speed">speed of snake</string>
    <string name="title_activity_options">FullscreenActivity</string>
    <string name="title_activity_statistics">FullscreenActivity</string>

    <string name="speed_snake">speed</string>

    <string name="stat_position">Pos</string>
    <string name="stat_speed">Speed</string>
    <string name="stat_points">Points</string>
    <string name="stat_date">Date</string>
</resources>
