<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".Statistics">

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/text_statistic"
        android:textColor="#FF5722"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/item_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stat_position"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"/>

        <TextView
            style="@style/item_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stat_speed" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"/>

        <TextView
            style="@style/item_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stat_points" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"/>

        <TextView
            style="@style/item_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stat_date" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stat_list"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


<!--        <TableLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_margin="20dp"-->
<!--        android:stretchColumns="1">-->

<!--        <TableRow>-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/stat_speed" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/stat_points" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/stat_date" />-->

<!--        </TableRow>-->

<!--        <TableRow>-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="1" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="5" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="10000" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="01.05.2005" />-->

<!--        </TableRow>-->

<!--        <TableRow>-->


<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="2" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="5" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="100" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="01.05.2005" />-->

<!--        </TableRow>-->

<!--        <TableRow>-->


<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="3" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="4" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="999999" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="01.05.2005" />-->

<!--        </TableRow>-->

<!--        <TableRow>-->


<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="4" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="4" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="9999" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="01.05.2005" />-->

<!--        </TableRow>-->

<!--        <TableRow>-->


<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="5" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="3" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="9999999" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                tools:text="01.05.2005" />-->

<!--        </TableRow>-->

<!--    </TableLayout>-->

</LinearLayout>